--- a/Lenguaje de marcas/Pagina Web/estilos.css
+++ b/Lenguaje de marcas/Pagina Web/estilos.css
@@ -2,11 +2,16 @@ body{
             background-color: aquamarine;
             background-attachment: fixed;
             font-family: "Times New Roman";
-            font-size: 12px;     
+            font-size: 12px; 
+    margin: 1%;
             }
 
 main{
-   
+    float: left;
+   width: 78%;
+    height: 500px;
+    /*border: 1px solid;*/
+    margin-bottom: 10px;
 }
 nav{
     background-color: black;
@@ -16,7 +21,7 @@ nav{
     padding: 10px;
     
 }
-article{
+section{
     border-style: dotted;
     border-radius: 60px;
     background-color: crimson;
@@ -24,16 +29,16 @@ article{
     margin-right:auto; 
     
 }
-section{
+article{
     margin: 10px;
     margin-left: 30px;
     
 }
 aside{
     background-color: brown;
-    height: 200px;
-    margin-left: auto;
-    align-content: 
+   height: 500px;
+    width: 20%;
+    float: right;
     }
 
 
@@ -49,6 +54,16 @@ a{
 a.index{
     border-style: hidden;
     
+    
+}
+footer{
+    position:fixed;
+    bottom: 0;
+    /*margin-top: 100%;
+    height: 90px;
+    /*border: 1px solid;*/
+    width: 100%;
+    
 }
 
 /* Cuando ponemos un ID se llama de esta manera con el # */
@@ -59,4 +74,6 @@ a.index{
             font-family: "Times New Roman";
             font-size: 50px;
 }
-
+#dos{
+    margin-top:2%;
+}
