--- a/Lenguaje de marcas/Pagina Web/estilos.css
+++ b/Lenguaje de marcas/Pagina Web/estilos.css
@@ -2,56 +2,65 @@ body{
             background-attachment: fixed;
             font-family: "Times New Roman";
             font-size: 12px; 
-    margin: 1%;
+            margin: 1%;
             }
 
 main{
     float: left;
-   width: 78%;
+    width: 78%;
     height: 500px;
-    /*border: 1px solid;*/
-    margin-bottom: 10px;
 }
+/* ---------NAVEGADOR--------*/
 nav{
-    background-color: black;
+    background-color: darkgray;
     color: white;
     padding: 10px;
-    
+    border-radius: 60px;
+    border:5px inset black;
 }
 nav ul{
     list-style-type: none;
-    text-align: ;
+    text-align: center;
     
 }
 nav li{
     display: inline;
 }
 nav a{
-    border: 10px double green;
-    color:white;
-    
-    
+    font-size: 20px; 
+    color:white;   
 }
-section{
-    border-style: dotted;
-    border-radius: 60px;
-    background-color: crimson;
-    height: 200px;
-    margin-right:auto; 
-    
+nav a.activo{
+    color:black;   
 }
-article{
-    margin: 10px;
-    margin-left: 30px;
-    
-}
-aside{
-    background-color: brown;
-   height: 500px;
-    width: 20%;
-    float: right;
-    }
+/* ----HEADER-------*/
 
+header{
+    margin-top: 20px;
+    margin-bottom: 20px;
+    justify-content: center;
+    align-content: center;
+    background-color: darkgray;
+    border-radius: 60px;
+    border: 5px inset black;
+    
+    color:orange;
+    text-align: center;
+    font-family: "Times New Roman";
+    font-size: 50px;
+}
+
+header li{
+    justify-content: center;
+    align-content: center;
+    display: inline-flex;
+
+}
+.texto{
+  margin: 100px;  
+    
+    
+}
 
 a{
     text-decoration: none;
@@ -61,21 +70,47 @@ a{
 a.index{
     border-style: hidden;
 }
+
+/* ----------PAGINA--------*/
+section{
+    border:5px inset black; 
+    border-radius: 60px;
+    background-color: darkgray;
+    height: 500px;
+    margin-right:auto; 
+    
+}
+article{
+    border:5px inset black;
+    border-radius: 60px;
+    background-color: white;
+    margin: 10px;
+    margin-left: 30px;
+    
+}
+
+/* ----ASIDE---*/
+aside{
+    background-color: darkgray;
+    border: 5px inset black;
+    border-radius: 60px;
+    height: 500px;
+    width: 20%;
+    float: right;
+    }
+/*----------- FOOTER---------*/
 footer{
-    position:fixed;
-    bottom: 0;
+    
+    background-color: darkgray;
+    border: 5px inset black;
+    border-radius: 60px;
+    position: relative;
+    display:flex;
+    top: 20px;
     width: 100%;
     
 }
 
 /* Cuando ponemos un ID se llama de esta manera con el # */
-#prueba{
-            color:orange;
-            background-color:darkviolet;
-            text-align: center;
-            font-family: "Times New Roman";
-            font-size: 50px;
-}
-#dos{
-    margin-top:2%;
-}
+
+
