--- a/Lenguaje de marcas/Pagina Web/estilos.css
+++ b/Lenguaje de marcas/Pagina Web/estilos.css
@@ -63,10 +63,10 @@ header img.logo{
     border:5px outset orange;
     border-radius: 40px;
 }
+
 header img.Chuches1{
     
         width: 150px;
-        margin-right: 100px;
         margin-bottom: 10px;
         margin-top: 10px;
     
@@ -79,7 +79,6 @@ header img.Chuches1{
 header img.Chuches2{
     
         width: 150px;
-        margin-left: 100px;
         margin-bottom: 10px;
         margin-top: 10px;
 
@@ -88,7 +87,8 @@ header img.Chuches2{
     
         transform: rotate(20deg);
 
-}/*
+}
+/*
 .texto{
   margin: 100px;  
 }*/
@@ -148,11 +148,10 @@ article img.foto{
     
 }
 article p.titulo{
-    color:crimson;
-    font-size: 20px;
+    color:blue;
+    font-size: 25px;
     text-align: center;
-    border-radius: 60px;
-    border:5px solid black;
+    font-weight: 900;
     height: auto;
 }
 article p.texto{
@@ -161,12 +160,16 @@ article p.texto{
     font-style: italic;
     font-weight: 900;
     
-    text-align: center;
+    margin-left: 200px;
+    margin-right: 200px;
+    
     border:1px solid;
     height: auto;
 }
 iframe{
-    margin:20px;
+    margin-left:200px;
+    margin-bottom: 20px;
+    width: 1000px;
     height: 300px;
     border-radius: 60px;
 }
