--- a/Lenguaje de marcas/Pagina Web/estilos.css
+++ b/Lenguaje de marcas/Pagina Web/estilos.css
@@ -39,6 +39,10 @@ nav a.activo{
     background-color: white;
     color:black;  
 }
+nav a:hover{
+    background-color: white;
+    color:black;  
+}
 /* ----HEADER-------*/
 
 header{
@@ -111,16 +115,14 @@ section{
     margin-right:auto; 
     
 }
-.IMAGEN{/* PONER LA IMAGEN UNA SOLA QUE OCUPE TODO*/
-    background-image: url(img/fonfo-chuches2.jpg);
-}
+
 article{
     border:5px inset black;
     border-radius: 60px;
     background-color: white;
     margin: 10px;
     margin-left: 10px;
-
+    text-align: center;
 }
 article h1{
     text-align: center;
@@ -135,8 +137,10 @@ article img.foto{
     /*FALTA CENTRAR IMAGENES 
     margin-left: center;
     margin-bottom:20px;
-    margin-right: auto;*/
-    
+    margin-right: auto;
+    padding-right: 50px;*/
+    margin-bottom: 10px;
+    margin-right: 50px;
     border-radius: 60px;
     
 }
@@ -163,15 +167,15 @@ article p.texto{
     margin-left: 200px;
     margin-right: 200px;
     
-    border:1px solid;
     height: auto;
 }
 iframe{
-    margin-left:200px;
+    margin-left:10px;
     margin-bottom: 20px;
-    width: 1000px;
-    height: 300px;
+    width: 500px;
+   height: 300px; 
     border-radius: 60px;
+    text-align: center;
 }
 /* ----ASIDE---*/
 aside{
@@ -216,7 +220,8 @@ footer li{
     
 }
 footer img{ /* FALTA PONER A LA DERECHA DEL TODO EL LOGO */
-    margin: 20px;
+    margin:20px;
+    margin-left: 70%;
     height: 40px;
     
     border:5px outset orange;
