--- a/Lenguaje de marcas/Pagina Web/estilos.css
+++ b/Lenguaje de marcas/Pagina Web/estilos.css
@@ -92,10 +92,6 @@ header img.Chuches2{
         transform: rotate(20deg);
 
 }
-/*
-.texto{
-  margin: 100px;  
-}*/
 
 a{
     text-decoration: none;
@@ -111,7 +107,7 @@ section{
     border:5px inset black; 
     border-radius: 60px;
     background-color: darkgray;
-    height: auto;
+    height: 1000px;
     margin-right:auto; 
     
 }
@@ -133,10 +129,14 @@ article h1{
 }
 article img.foto{
     height: 200px;
+    margin-top: 100px;
     margin-bottom: 10px;
     margin-right: 50px;
     border-radius: 60px;
     
+}
+.video{
+align-content: center;
 }
 p.Curriculum{
     margin-top: 10px;
@@ -170,6 +170,11 @@ article p.texto{
     
     height: auto;
 }
+.video{
+    text-align: center;
+    border: none;
+    background-color: darkgrey;
+}
 iframe{
     margin-left:10px;
     margin-bottom: 20px;
@@ -185,7 +190,7 @@ iframe{
     
 }
 p.formulario{
-    text-align: left;
+    text-align: center;
     font-size: 12px;
 }
 p.trabajo{
@@ -198,42 +203,27 @@ p.clausula{
     margin-right: 30px;
     margin-bottom: 10px;
 }
-/* ------TABLA------*/
-/*.tabla {
-    align-content: center;
+
+p.curriculum{
     
-} */
+    text-align: center;
+    font-size: 12px;
+}
 /* ------FORMULARIO ----- */
-input[type=text],input[type=date],input[type=email],input[type=submit],input[type=checkbox] {
+input[type=text],input[type=email],input[type=submit],input[type=checkbox] {
     padding: 5px 10px; 
-    /*margin: 8px 5px;*/
+    margin: 8px 5px;
     border-bottom-style: groove;
     border-radius: 4px;
-}/*
+}
 input[type=date] {
     padding: 5px 10px;
     margin: 8px 5px;
     border-bottom-style: groove;
     border-radius: 4px;
+    width: 50%;
 }
-input[type=email] {
-    padding: 5px 10px;
-    margin: 8px 10px;
-    border-bottom-style: groove;
-    border-radius: 4px;
-}
-input[type=submit]{
-    padding: 5px 10px;
-    margin: 8px 10px;
-    border-bottom-style: groove;
-    border-radius: 4px;    
-}*/ /*
-input[type=file]{
-    padding: 5px 10px;
-    margin: 8px 10px;
 
-    border-radius: 4px;    
-}
 textarea.trabajo{
     
     width: 90%;
@@ -246,7 +236,7 @@ aside{
     background-color: darkgray;
     border: 5px inset black;
     border-radius: 60px;
-    height: auto;
+    height: 1000px;
     width: 20%;
     float: right;
     }
@@ -262,9 +252,14 @@ aside p{
 aside img{
     height: 50px;
     display:flex;
+    margin-top: 100px;
     margin-left: auto;
     margin-right: auto;
     
+}
+.publi{
+    
+    margin-top: 100px;
 }
 /*----------- FOOTER---------*/
 footer{
