--- a/Lenguaje de marcas/Pagina Web/estilos.css
+++ b/Lenguaje de marcas/Pagina Web/estilos.css
@@ -101,6 +101,116 @@ a{
 a.index{
     border-style: hidden;
 }
+/* -------GALERIA --------*/
+article p.articulos{
+    margin-top: 10px;
+    margin: 20px;
+    border: 5px outset hotpink;
+    border-radius: 60px;
+    font-size: 20px;
+    font-weight: bolder;
+    text-align: center;
+    background-color: skyblue;
+}
+/*Estilos de la galeria*/
+
+.galeria {
+	width: 90%;
+	margin: auto;
+	list-style: none;
+	padding: 20px;
+	box-sizing: border-box;    
+    
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-around;
+}
+
+.galeria li {
+	margin: 5px;
+}
+
+.galeria img {
+    border: 5px outset black;
+    margin:50px;
+    border-radius: 60px;
+    
+    width: 150px;
+    height: 100px;
+}
+
+/*Estilos del modal*/
+
+.modal {
+	display: none;
+}
+
+.modal:target {
+	
+	display: block;
+	position: fixed;
+	background: rgba(0,0,0,0.8);
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+}
+
+.modal h3 {
+	color: #fff;
+	font-size: 30px;
+	text-align: center;
+	margin: 15px 0;
+}
+
+.imagen {
+	width: 100%;
+	height: 50%;
+	
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.imagen a {
+	color: #fff;
+	font-size: 40px;
+	text-decoration: none;
+	margin: 0 10px;
+}
+
+.imagen a:nth-child(2) {
+	margin: 0;
+	height: 100%;
+	flex-shrink: 2;
+}
+
+.imagen img {
+	width: 500px;
+	height: 100%;
+	max-width: 100%;
+	border: 7px solid #fff;
+	box-sizing: border-box;
+}
+
+.cerrar {
+	display: block;
+	background: #fff;
+	width: 25px;
+	height: 25px;
+	margin: 15px auto;
+	text-align: center;
+	text-decoration: none;
+	font-size: 25px;
+	color: #000;
+	padding: 5px;
+	border-radius: 50%;
+	line-height: 25px;
+}
+.precio{
+    font-size: 20px;
+    font-weight: bold;
+}
 
 /* ----------PAGINA--------*/
 section{
@@ -230,6 +340,17 @@ textarea.trabajo{
     margin-left:40px; 
     margin-right: 40px;
     
+}
+fieldset p.formulario{
+    
+    margin-right: inherit;
+}
+.celda{
+    font-size: 20px;
+    width: auto;
+    margin-left: 100px;
+    border:solid 5px;
+    border-color: white;
 }
 /* ----ASIDE---*/
 aside{
