--- a/Lenguaje de marcas/JavaScript/Calculadora/estilo.css
+++ b/Lenguaje de marcas/JavaScript/Calculadora/estilo.css
@@ -7,16 +7,15 @@
 
 
 .calculadora {
-	background-color: #e2e2e2;
 	width: 300px;
     height: 500px;
     margin-top: 35px;
 }
-.sr {
+.igual {
 	padding: 0px 18px 18px 18px;
 }
 
-.sr button {
+.igual button {
 	width: 100%;
 	background-color: chocolate;
 	color: #fff;
@@ -65,7 +64,7 @@
 
 .numeros button {
 	border: 0px;
-	background-color: #fff;
+	background-color: lightgrey;
 	transition: all 0.09s
 }
 
